--- a/estilos.css
+++ b/estilos.css
@@ -44,7 +44,7 @@ header, .menu {
 .menuItems li a {
   text-decoration: none;
   color: #b3b1b1;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 1.1rem;
   letter-spacing: 0.09rem;
   font-weight: bold;
@@ -136,7 +136,7 @@ footer {
   padding-top: 13px;
   margin-left: 3%;
   font-size: 1.4rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   color: white;
   float: left;
   display: inline;
@@ -171,7 +171,7 @@ footer {
 
 .foot2 p {
   color: #e9e9e9;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 1rem;
   letter-spacing: 1px;
   line-height: 24px;
@@ -179,7 +179,7 @@ footer {
 
 .foot2 .contactoFooter {
   font-size: 1.6rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   color: white;
   padding-top: 15px;
   padding-bottom: 10px;
@@ -258,8 +258,16 @@ footer {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
-  max-width: 100%;
+  width: 100%;
   margin: auto;
+}
+
+.carousel-caption h5 {
+  font-size: 2em;
+}
+
+.carousel-caption p {
+  font-size: 1.4em;
 }
 
 .porque {
@@ -272,8 +280,12 @@ footer {
   grid-row: 2/3;
   font-size: 1.6rem;
   padding-top: 15px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   text-align: center;
+}
+
+.porque h2 {
+  font-weight: bold;
 }
 
 .porque1 {
@@ -339,7 +351,7 @@ footer {
 
 .recuadroMinorista h2, .recuadroMayorista h2 {
   font-size: 1.9rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   color: white;
   margin-top: 20%;
   text-align: center;
@@ -347,7 +359,7 @@ footer {
 
 .recuadroMinorista p, .recuadroMayorista p {
   font-size: 1.1rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   color: white;
   margin-top: 5%;
   text-align: justify;
@@ -386,6 +398,15 @@ footer {
   background-color: rgba(0, 0, 0, 0.764);
   -webkit-transition: .3s ease all;
   transition: .3s ease all;
+}
+
+@media all and (max-width: 1250px) {
+  .carousel-caption h5 {
+    font-size: 1.8em;
+  }
+  .carousel-caption p {
+    font-size: 1.15em;
+  }
 }
 
 @media all and (max-width: 1000px) {
@@ -448,6 +469,12 @@ footer {
     -ms-grid-row-span: 1;
     grid-row: 5/6;
   }
+  .carousel-caption h5 {
+    font-size: 1.5em;
+  }
+  .carousel-caption p {
+    font-size: 0.85em;
+  }
 }
 
 @media all and (max-width: 920px) {
@@ -467,6 +494,15 @@ footer {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1/2;
+  }
+  .carousel-caption {
+    padding: 3px;
+  }
+  .carousel-caption h5 {
+    font-size: 1.2em;
+  }
+  .carousel-caption p {
+    font-size: 0.65em;
   }
   .porque {
     -ms-grid-column: 1;
@@ -531,7 +567,22 @@ footer {
   }
 }
 
+@media all and (max-width: 571px) {
+  .carousel-caption h5 {
+    font-size: 1.1em;
+  }
+  .carousel-caption p {
+    font-size: 0.4em;
+  }
+}
+
 @media all and (max-width: 400px) {
+  .carousel-caption h5 {
+    font-size: 0.8em;
+  }
+  .carousel-caption p {
+    font-size: 0.3em;
+  }
   .recuadroMinorista h2, .recuadroMayorista h2 {
     font-size: 1.5rem;
   }
@@ -619,7 +670,7 @@ footer {
   grid-row: 1/2;
   font-size: 2.5rem;
   padding-top: 25px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   text-align: center;
   font-weight: bold;
   margin-top: 20px;
@@ -634,7 +685,7 @@ footer {
   grid-row: 2/3;
   font-size: 1.3rem;
   padding-bottom: 5px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   text-align: center;
   color: red;
 }
@@ -685,7 +736,7 @@ footer {
   font-size: 1.3rem;
   padding-top: 35px;
   padding-bottom: 5px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   text-align: center;
   color: red;
 }
@@ -1006,7 +1057,7 @@ footer {
   -ms-grid-row-span: 1;
   grid-row: 1/2;
   font-size: 2.2rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   text-align: center;
   margin-top: 40px;
   -webkit-animation-duration: 5s;
@@ -1063,7 +1114,7 @@ footer {
   margin-top: 10px;
   color: #3b3b3b;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 1.8rem;
   margin-bottom: 30px;
 }
@@ -1073,7 +1124,7 @@ footer {
   margin: 5px;
   margin-left: 5%;
   padding: 10px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size: 1.05rem;
   border: none;
   border-radius: 5px;
