--- a/estilos.scss
+++ b/estilos.scss
@@ -4,6 +4,8 @@
     box-sizing: border-box;
 }
 
+$font1: Helvetica, Arial, sans-serif;
+
 
 /*HEADER*/
 
@@ -45,7 +47,7 @@ header{
 .menuItems li a{
     text-decoration: none;
     color: rgb(179, 177, 177);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     font-size: 1.1rem;
     letter-spacing: 0.09rem;
     font-weight: bold;
@@ -136,7 +138,7 @@ footer{
     padding-top: 13px;
     margin-left: 3%;
     font-size: 1.4rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     color:white;
     float: left;
     display: inline;
@@ -161,14 +163,14 @@ footer{
 }
 .foot2 p{
     color: rgb(233, 233, 233);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     font-size: 1rem;
     letter-spacing: 1px;
     line-height: 24px;
 }
 .foot2 .contactoFooter{
     font-size: 1.6rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     color: white;
     padding-top: 15px;
     padding-bottom: 10px;
@@ -236,8 +238,16 @@ footer{
 #carouselExampleCaptions{
     grid-column: 1/7;
     grid-row: 1/2;
-    max-width: 100%;  
+    width: 100%;  
     margin: auto;
+}
+
+.carousel-caption h5{
+    font-size: 2em;
+}
+
+.carousel-caption p{
+    font-size: 1.4em;
 }
 
 .porque{
@@ -246,8 +256,12 @@ footer{
     grid-row: 2/3;
     font-size: 1.6rem;
     padding-top: 15px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     text-align: center;
+}
+
+.porque h2{
+    font-weight: bold;
 }
 
 .porque1{
@@ -297,7 +311,7 @@ footer{
 
 .recuadroMinorista h2, .recuadroMayorista h2{
     font-size: 1.9rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     color: white;
     margin-top: 20%;
     text-align: center;
@@ -305,7 +319,7 @@ footer{
 
 .recuadroMinorista p, .recuadroMayorista p{
     font-size: 1.1rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     color: white;
     margin-top: 5%;
     text-align: justify;
@@ -340,6 +354,15 @@ footer{
     transition: .3s ease all;
 }
 
+@media all and (max-width: 1250px){
+    .carousel-caption h5{
+        font-size: 1.8em;
+    }
+    
+    .carousel-caption p{
+        font-size: 1.15em;
+    }
+}
 
 @media all and (max-width: 1000px){
     #carouselExampleCaptions{
@@ -373,6 +396,12 @@ footer{
         grid-column: 3/5;
         grid-row: 5/6;
     }
+    .carousel-caption h5{
+        font-size: 1.5em;
+    }
+    .carousel-caption p{
+        font-size: 0.85em;
+    }
 }
 
 @media all and (max-width: 920px){
@@ -388,6 +417,15 @@ footer{
     #carouselExampleCaptions{
         grid-column: 1/2;
         grid-row: 1/2;
+    }
+    .carousel-caption{
+        padding: 3px;
+    }
+    .carousel-caption h5{
+        font-size: 1.2em;
+    }
+    .carousel-caption p{
+        font-size: 0.65em;
     }
     .porque{
         grid-column: 1/2;
@@ -428,8 +466,21 @@ footer{
         font-size: 1.1rem;
     }
 }
-
+@media all and (max-width: 571px){
+    .carousel-caption h5{
+        font-size: 1.1em;
+    }
+    .carousel-caption p{
+        font-size: 0.4em;
+    }
+}
 @media all and (max-width: 400px){
+    .carousel-caption h5{
+        font-size: 0.8em;
+    }
+    .carousel-caption p{
+        font-size: 0.3em;
+    }
     .recuadroMinorista h2, .recuadroMayorista h2{
         font-size: 1.5rem;
     }
@@ -495,7 +546,7 @@ footer{
     grid-row: 1/2;
     font-size: 2.5rem;
     padding-top: 25px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     text-align: center;
     font-weight: bold;
     margin-top: 20px;
@@ -506,7 +557,7 @@ footer{
     grid-row: 2/3;
     font-size: 1.3rem;
     padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     text-align: center;
     color: red;
 }
@@ -537,7 +588,7 @@ footer{
     font-size: 1.3rem;
     padding-top: 35px;
     padding-bottom: 5px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     text-align: center;
     color: red;
 }
@@ -723,7 +774,7 @@ footer{
     grid-column: 1/5;
     grid-row: 1/2;
     font-size: 2.2rem;
-    font-family:Arial, Helvetica, sans-serif;
+    font-family: $font1;
     text-align: center;
     margin-top: 40px;
     animation-duration: 5s;
@@ -763,7 +814,7 @@ footer{
     margin-top: 10px;
     color: rgb(59, 59, 59);
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     font-size: 1.8rem;
     margin-bottom: 30px;
 }
@@ -773,7 +824,7 @@ footer{
     margin: 5px;
     margin-left: 5%;
     padding:10px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $font1;
     font-size: 1.05rem;
     border: none;
     border-radius: 5px;
