--- a/estilos.css
+++ b/estilos.css
@@ -51,14 +51,14 @@ header, .menu {
 }
 
 .menuItems li a:hover {
-  color: #dea221;
+  color: #f52f2c;
   -webkit-transform: translateY(15px);
           transform: translateY(15px);
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 
-@media all and (max-width: 760px) {
+@media all and (max-width: 660px) {
   .logo {
     margin: auto;
     width: 200px;
@@ -79,7 +79,7 @@ header, .menu {
   }
 }
 
-@media all and (max-width: 600px) {
+@media all and (max-width: 500px) {
   .logo {
     margin: auto;
     width: 150px;
@@ -91,7 +91,7 @@ header, .menu {
     padding-right: 10px;
   }
   .menuItems li a {
-    font-size: 0.6rem;
+    font-size: 0.7rem;
     letter-spacing: 0.05rem;
   }
   .menu {
@@ -112,7 +112,7 @@ header, .menu {
     padding-right: 7px;
   }
   .menuItems li a {
-    font-size: 0.5rem;
+    font-size: 0.7rem;
     letter-spacing: 0.04rem;
   }
   .menu {
@@ -175,6 +175,7 @@ footer {
   font-size: 1rem;
   letter-spacing: 1px;
   line-height: 24px;
+  padding-bottom: 0px;
 }
 
 .foot2 .contactoFooter {
@@ -237,13 +238,14 @@ footer {
 
 /*INDEX*/
 .mainIndex {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#d2d2d2), color-stop(15%, #ededed), color-stop(80%, white));
-  background-image: linear-gradient(#d2d2d2, #ededed 15%, white 80%);
+  background-color: #fefdfd;
 }
 
 .contenedorGridIndex {
   display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   width: 90%;
   margin: auto;
   gap: 2.5rem;
@@ -284,44 +286,81 @@ footer {
   text-align: center;
 }
 
-.porque h2 {
+.porque h1 {
   font-weight: bold;
 }
 
 .porque1 {
-  width: 100%;
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-column: 1/3;
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3/4;
-  background-color: #fec062;
-  height: 350px;
 }
 
 .porque2 {
-  width: 100%;
   -ms-grid-column: 3;
   -ms-grid-column-span: 2;
   grid-column: 3/5;
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3/4;
-  background-color: #fec062;
-  height: 350px;
 }
 
 .porque3 {
-  width: 100%;
   -ms-grid-column: 5;
   -ms-grid-column-span: 2;
   grid-column: 5/7;
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3/4;
-  background-color: #fec062;
+}
+
+.indexCard {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  background-color: rgba(255, 234, 43, 0.785);
   height: 350px;
+  width: 100%;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 0 20px #838383;
+          box-shadow: 0 0 20px #838383;
+}
+
+.indexCard i {
+  margin: 0 auto;
+  padding-top: 40px;
+  padding-bottom: 15px;
+  font-size: 6em;
+  color: #f52f2c;
+}
+
+.indexCard h2 {
+  color: #f52f2c;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 2.3em;
+  font-weight: bold;
+  letter-spacing: -2px;
+  margin: 0 auto;
+  padding-bottom: 25px;
+}
+
+.cardText {
+  width: 80%;
+}
+
+.cardText p {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.1em;
+  text-align: justify;
 }
 
 .contenedorMinorista {
@@ -410,6 +449,10 @@ footer {
 }
 
 @media all and (max-width: 1000px) {
+  .contenedorGridIndex {
+    -ms-grid-columns: 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
   #carouselExampleCaptions {
     -ms-grid-column: 1;
     -ms-grid-column-span: 4;
@@ -487,6 +530,10 @@ footer {
 }
 
 @media all and (max-width: 740px) {
+  .contenedorGridIndex {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
   #carouselExampleCaptions {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
@@ -576,7 +623,7 @@ footer {
   }
 }
 
-@media all and (max-width: 400px) {
+@media all and (max-width: 430px) {
   .carousel-caption h5 {
     font-size: 0.8em;
   }
@@ -590,27 +637,18 @@ footer {
     font-size: 0.9rem;
   }
   .porque1 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
     -ms-grid-row: 3;
     -ms-grid-row-span: 1;
     grid-row: 3/4;
     width: 100%;
   }
   .porque2 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
     -ms-grid-row: 4;
     -ms-grid-row-span: 1;
     grid-row: 4/5;
     width: 100%;
   }
   .porque3 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
     -ms-grid-row: 5;
     -ms-grid-row-span: 1;
     grid-row: 5/6;
@@ -619,14 +657,12 @@ footer {
 }
 
 /*PRODUCTOS*/
-.contenedorProductos {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#d2d2d2), color-stop(15%, #ededed), color-stop(80%, white));
-  background-image: linear-gradient(#d2d2d2, #ededed 15%, white 80%);
+.mainProductos {
+  background-color: #fefdfd;
 }
 
 .gridProductos {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#d2d2d2), color-stop(15%, #ededed), color-stop(80%, white));
-  background-image: linear-gradient(#d2d2d2, #ededed 15%, white 80%);
+  background-color: #fefdfd;
   width: 90%;
   margin: auto;
   display: -ms-grid;
@@ -668,7 +704,7 @@ footer {
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
-  font-size: 2.5rem;
+  font-size: 1.7rem;
   padding-top: 25px;
   font-family: Helvetica, Arial, sans-serif;
   text-align: center;
@@ -1022,24 +1058,204 @@ footer {
 }
 
 /*NOSOTROS*/
-#nosmain {
-  background-image: url(imagenes/gback.jpg);
+.mainNosotros {
+  background-color: #fefdfd;
 }
 
-#imgnos {
-  height: 400px;
+.gridNosotros {
+  background-color: #fefdfd;
+  width: 90%;
+  margin: auto;
+  display: -ms-grid;
+  display: grid;
+  gap: 2rem;
+  padding-bottom: 40px;
+}
+
+.nosotrosTitulo {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1/4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  font-size: 1.7em;
+  padding-top: 25px;
+  font-family: Helvetica, Arial, sans-serif;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+.nosotrosImg {
   width: 100%;
 }
 
-#imgnos img {
-  max-height: 400px;
+.nosotrosImg img {
   width: 100%;
+}
+
+.nosotrosItem {
+  width: 100%;
+}
+
+.nosotrosItem p {
+  font-family: Helvetica, Arial, sans-serif;
+  text-align: justify;
+  line-height: 25px;
+  font-size: 1em;
+}
+
+.nosotrosItem p span {
+  font-size: 1.8em;
+}
+
+.nosotrosDivisor {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2/3;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2/5;
+  background-color: #f52f2c;
+  width: 5px;
+}
+
+.nososotrosImg1 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+}
+
+.nosotrosPar1 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+}
+
+.nosotrosPar2 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/4;
+}
+
+.nososotrosImg2 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 1;
+  grid-row: 3/4;
+}
+
+.nososotrosImg3 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+}
+
+.nosotrosPar3 {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-row: 4;
+  -ms-grid-row-span: 1;
+  grid-row: 4/5;
+}
+
+@media all and (max-width: 960px) {
+  .nosotrosItem p {
+    line-height: 18px;
+    font-size: 0.8em;
+  }
+}
+
+@media all and (max-width: 720px) {
+  .nosotrosTitulo {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    font-size: 1.4rem;
+  }
+  .nosotrosItem p {
+    line-height: 22px;
+    font-size: 1em;
+  }
+  .nosotrosItem p span {
+    font-size: 1.4em;
+  }
+  .nosotrosDivisor {
+    display: none;
+  }
+  .nososotrosImg1 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+  }
+  .nosotrosPar1 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+  }
+  .nososotrosImg2 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+  }
+  .nosotrosPar2 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5/6;
+  }
+  .nososotrosImg3 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 1;
+    grid-row: 6/7;
+  }
+  .nosotrosPar3 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 7;
+    -ms-grid-row-span: 1;
+    grid-row: 7/8;
+  }
 }
 
 /*CONTACTO*/
-.containerContacto {
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#d2d2d2), color-stop(15%, #ededed), color-stop(80%, white));
-  background-image: linear-gradient(#d2d2d2, #ededed 15%, white 80%);
+.mainContacto {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#fefdfd), to(#eeeeee));
+  background-image: linear-gradient(#fefdfd, #eeeeee);
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 5% 45% 45% 5%;
@@ -1049,17 +1265,19 @@ footer {
   margin: auto;
 }
 
-.containerContacto h2 {
+.contactoTitulo {
   -ms-grid-column: 1;
   -ms-grid-column-span: 4;
   grid-column: 1/5;
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
-  font-size: 2.2rem;
+  font-size: 1.4em;
+  padding-top: 25px;
   font-family: Helvetica, Arial, sans-serif;
   text-align: center;
-  margin-top: 40px;
+  font-weight: bold;
+  margin-top: 20px;
   -webkit-animation-duration: 5s;
           animation-duration: 5s;
   -webkit-animation-name: aparición;
@@ -1107,10 +1325,10 @@ footer {
   padding-bottom: 90px;
   border-radius: 12px;
   border: 7px solid black;
-  background-color: #fcad19;
+  background-color: rgba(255, 234, 43, 0.785);
 }
 
-.formularioContacto h3 {
+.formularioContacto h2 {
   margin-top: 10px;
   color: #3b3b3b;
   text-align: center;
@@ -1164,7 +1382,7 @@ footer {
 }
 
 @media all and (max-width: 760px) {
-  .containerContacto {
+  .mainContacto {
     height: 1680px;
   }
   .containerFormulario {
