--- a/estilos.scss
+++ b/estilos.scss
@@ -5,6 +5,9 @@
 }
 
 $font1: Helvetica, Arial, sans-serif;
+$rojo:  rgb(245, 47, 44);
+$gris: rgb(254, 253, 253);
+$amarillo: rgba(255, 234, 43, 0.785);
 
 
 /*HEADER*/
@@ -54,13 +57,13 @@ header{
 }
 
 .menuItems li a:hover{
-    color: rgb(222, 162, 33);
+    color: $rojo;
     transform: translateY(15px);
     transition: 0.2s;
 }
 
 
-@media all and (max-width: 760px){
+@media all and (max-width: 660px){
     .logo{
         margin:auto;
         width: 200px;
@@ -81,7 +84,7 @@ header{
         padding-bottom: 11px;
     }
 }
-@media all and (max-width: 600px){
+@media all and (max-width: 500px){
     .logo{
         margin:auto;
         width: 150px;
@@ -94,7 +97,7 @@ header{
     }
     
     .menuItems li a{
-        font-size: 0.6rem;
+        font-size: 0.7rem;
         letter-spacing: 0.05rem;
     }
     .menu{
@@ -116,7 +119,7 @@ header{
     }
     
     .menuItems li a{
-        font-size: 0.5rem;
+        font-size: 0.7rem;
         letter-spacing: 0.04rem;
     }
     .menu{
@@ -167,6 +170,7 @@ footer{
     font-size: 1rem;
     letter-spacing: 1px;
     line-height: 24px;
+    padding-bottom: 0px;
 }
 .foot2 .contactoFooter{
     font-size: 1.6rem;
@@ -223,11 +227,12 @@ footer{
 /*INDEX*/
 
 .mainIndex{
-    background-image: linear-gradient(rgb(210, 210, 210),rgb(237, 237, 237) 15%, white 80%);
+    background-color: $gris;
 }
 
 .contenedorGridIndex{
     display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     width: 90%;
     margin: auto;
     gap: 2.5rem;
@@ -260,32 +265,62 @@ footer{
     text-align: center;
 }
 
-.porque h2{
+.porque h1{
     font-weight: bold;
 }
 
 .porque1{
-    width: 100%;
     grid-column: 1/3;
     grid-row: 3/4;
-    background-color: rgb(254, 192, 98);
-    height: 350px;
 }
 
 .porque2{
-    width: 100%;
     grid-column: 3/5;
     grid-row: 3/4;
-    background-color: rgb(254, 192, 98);
-    height: 350px;
 }
 
 .porque3{
-    width: 100%;
     grid-column: 5/7;
     grid-row: 3/4;
-    background-color: rgb(254, 192, 98);
+}
+
+.indexCard{
+    display: flex;
+    flex-flow: column wrap;
+    align-content: center;
+    background-color: $amarillo;
     height: 350px;
+    width: 100%;
+    border-radius: 5px;
+    box-shadow: 0 0 20px rgb(131, 131, 131) ;
+}
+
+.indexCard i{
+    margin: 0 auto;
+    padding-top: 40px;
+    padding-bottom: 15px;
+    font-size: 6em;
+    color: $rojo;
+}
+
+.indexCard h2{
+    color: $rojo;
+    font-family: $font1;
+    font-size: 2.3em;
+    font-weight: bold;
+    letter-spacing: -2px;
+    margin: 0 auto;
+    padding-bottom: 25px;
+}
+
+.cardText{
+    width: 80%;
+}
+
+.cardText p{
+    font-family: $font1;
+    font-size: 1.1em;
+    text-align: justify;
 }
 
 .contenedorMinorista{
@@ -365,6 +400,9 @@ footer{
 }
 
 @media all and (max-width: 1000px){
+    .contenedorGridIndex{
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
     #carouselExampleCaptions{
         grid-column: 1/5;
         grid-row: 1/2;
@@ -414,6 +452,9 @@ footer{
 }
 
 @media all and (max-width: 740px){
+    .contenedorGridIndex{
+        grid-template-columns: 1fr;
+    }
     #carouselExampleCaptions{
         grid-column: 1/2;
         grid-row: 1/2;
@@ -474,7 +515,7 @@ footer{
         font-size: 0.4em;
     }
 }
-@media all and (max-width: 400px){
+@media all and (max-width: 430px){
     .carousel-caption h5{
         font-size: 0.8em;
     }
@@ -488,17 +529,14 @@ footer{
         font-size: 0.9rem;
     }
     .porque1{
-        grid-column: 1/2;
         grid-row: 3/4;
         width: 100%;
     }
     .porque2{
-        grid-column: 1/2;
         grid-row: 4/5;
         width: 100%;
     }
     .porque3{
-        grid-column: 1/2;
         grid-row: 5/6;
         width: 100%;
     }
@@ -506,12 +544,12 @@ footer{
 
 /*PRODUCTOS*/
 
-.contenedorProductos{
-    background-image: linear-gradient(rgb(210, 210, 210),rgb(237, 237, 237) 15%, white 80%);
+.mainProductos{
+    background-color: $gris;
 }
 
 .gridProductos{
-    background-image: linear-gradient(rgb(210, 210, 210),rgb(237, 237, 237) 15%, white 80%);
+    background-color: $gris;
     width: 90%;
     margin: auto;
     display: grid;
@@ -544,7 +582,7 @@ footer{
 .productosTitulo{
     grid-column: 1/4;
     grid-row: 1/2;
-    font-size: 2.5rem;
+    font-size: 1.7rem;
     padding-top: 25px;
     font-family: $font1;
     text-align: center;
@@ -745,24 +783,144 @@ footer{
 
 /*NOSOTROS*/
 
-#nosmain{
-    background-image: url(imagenes/gback.jpg);
+.mainNosotros{
+    background-color: $gris;
 }
 
-#imgnos{
-    height: 400px;
+.gridNosotros{
+    background-color: $gris;
+    width: 90%;
+    margin: auto;
+    display: grid;
+    gap: 2rem;
+    padding-bottom: 40px;
+}
+
+.nosotrosTitulo{
+    grid-column: 1/4;
+    grid-row: 1/2;
+    font-size: 1.7em;
+    padding-top: 25px;
+    font-family: $font1;
+    text-align: center;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.nosotrosImg{
     width: 100%;
 }
 
-#imgnos img{
-    max-height: 400px;
+.nosotrosImg img{
     width: 100%;
+}
+
+.nosotrosItem{
+    width: 100%;
+}
+
+.nosotrosItem p{
+    font-family: $font1;
+    text-align: justify;
+    line-height: 25px;
+    font-size: 1em;
+}
+
+.nosotrosItem p span{
+    font-size: 1.8em;
+}
+
+.nosotrosDivisor{
+    grid-column: 2/3;
+    grid-row: 2/5;
+    background-color: $rojo;
+    width: 5px;
+}
+
+.nososotrosImg1{
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+
+.nosotrosPar1{
+    grid-column: 3/4;
+    grid-row: 2/3;    
+}
+
+.nosotrosPar2{
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+
+.nososotrosImg2{
+    grid-column: 3/4;
+    grid-row: 3/4;
+}
+
+.nososotrosImg3{
+    grid-column: 1/2;
+    grid-row: 4/5;
+}
+
+.nosotrosPar3{
+    grid-column: 3/4;
+    grid-row: 4/5;
+}
+
+
+@media all and (max-width: 960px){
+    .nosotrosItem p{
+        line-height: 18px;
+        font-size: 0.8em;
+    }
+}
+
+@media all and (max-width: 720px){
+    .nosotrosTitulo{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        font-size: 1.4rem;
+    }
+    .nosotrosItem p{
+        line-height: 22px;
+        font-size: 1em;
+    }
+    .nosotrosItem p span{
+        font-size: 1.4em;
+    }
+    .nosotrosDivisor{
+        display: none;
+    }
+    .nososotrosImg1{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .nosotrosPar1{
+        grid-column: 1/2;
+        grid-row: 3/4;    
+    }
+    .nososotrosImg2{
+        grid-column: 1/2;
+        grid-row: 4/5;
+    }
+    .nosotrosPar2{
+        grid-column: 1/2;
+        grid-row: 5/6;
+    }
+    .nososotrosImg3{
+        grid-column: 1/2;
+        grid-row: 6/7;
+    }
+    .nosotrosPar3{
+        grid-column: 1/2;
+        grid-row: 7/8;
+    }
 }
 
 /*CONTACTO*/
 
-.containerContacto{
-    background-image: linear-gradient(rgb(210, 210, 210),rgb(237, 237, 237) 15%, white 80%);
+.mainContacto{
+    background-image: linear-gradient($gris,rgb(238, 238, 238));
     display: grid;
     grid-template-columns: 5% 45% 45% 5%;
     width: 100%;
@@ -770,13 +928,15 @@ footer{
     margin: auto;
 }
 
-.containerContacto h2{
+.contactoTitulo{
     grid-column: 1/5;
     grid-row: 1/2;
-    font-size: 2.2rem;
+    font-size: 1.4em;
+    padding-top: 25px;
     font-family: $font1;
     text-align: center;
-    margin-top: 40px;
+    font-weight: bold;
+    margin-top: 20px;
     animation-duration: 5s;
     animation-name: aparición;
     animation-delay: initial;
@@ -807,10 +967,10 @@ footer{
     padding-bottom: 90px;
     border-radius: 12px;
     border: 7px solid black;
-    background-color: rgb(252, 173, 25);
+    background-color: $amarillo;
 }
 
-.formularioContacto h3{
+.formularioContacto h2{
     margin-top: 10px;
     color: rgb(59, 59, 59);
     text-align: center;
@@ -860,7 +1020,7 @@ footer{
 }
 
 @media all and (max-width: 760px){
-    .containerContacto{
+    .mainContacto{
         height: 1680px;
     }
     .containerFormulario{
