--- a/estilos.scss
+++ b/estilos.scss
@@ -233,7 +233,7 @@ footer{
 .contenedorGridIndex{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    width: 90%;
+    width: 95%;
     margin: auto;
     gap: 2.5rem;
     padding-top: 40px;
@@ -526,7 +526,7 @@ footer{
         font-size: 1.5rem;
     }
     .recuadroMinorista p, .recuadroMayorista p{
-        font-size: 0.9rem;
+        font-size: 0.85rem;
     }
     .porque1{
         grid-row: 3/4;
@@ -540,7 +540,19 @@ footer{
         grid-row: 5/6;
         width: 100%;
     }
+    .indexCard i{
+        font-size: 5.5em;
+    }
+    
+    .cardText{
+        width: 85%;
+    }
+    
+    .cardText p{
+        font-size: 1em;
+    }
 }
+
 
 /*PRODUCTOS*/
 
